--- a/athletics_training_app/pubspec.yaml
+++ b/athletics_training_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   audioplayers: ^6.1.0
+  flutter_local_notifications: ^17.2.3
+  flutter_launcher_icons: ^0.14.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +54,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/playstore.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
