--- a/athletics_training_app/pubspec.yaml
+++ b/athletics_training_app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: athletics_training_app
 description: "A new Flutter project."
-publish_to: "none" 
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -10,17 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.0
   cupertino_icons: ^1.0.8
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   audioplayers: ^6.1.0
   flutter_local_notifications: ^18.0.0
   uuid: ^4.5.1
+  sqflite: ^2.3.0
+  path_provider: ^2.0.13
+  fl_chart: ^0.69.2
 
+  hive: any
+  timezone: any
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive: ^2.2.3
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
   flutter_launcher_icons: ^0.14.1
@@ -41,7 +47,7 @@ flutter_launcher_icons:
   windows:
     generate: true
     image_path: "assets/icons/playstore.png"
-    icon_size: 48 
+    icon_size: 48
 
   macos:
     generate: true
@@ -53,3 +59,4 @@ flutter:
   assets:
     - assets/icons/playstore.png
     - assets/sounds/notification.mp3
+    - assets/athletics_data.json
